<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTooLightGrey">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/movie_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="God Father" />

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
            tools:text="2018" />

        <ImageView
            android:id="@+id/iv_dot_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/dot_separator"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_release_date"
            app:layout_constraintStart_toEndOf="@+id/tv_movie_release_date"
            app:layout_constraintTop_toTopOf="@+id/tv_movie_release_date"
            app:srcCompat="@drawable/dot_icon" />

        <TextView
            android:id="@+id/tv_movie_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_release_date"
            app:layout_constraintStart_toEndOf="@+id/iv_dot_separator"
            app:layout_constraintTop_toTopOf="@+id/tv_movie_release_date"
            tools:text="English" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/vote_count_icon"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_vote_average"
            app:layout_constraintTop_toTopOf="@+id/tv_vote_average"
            app:srcCompat="@drawable/star_face_icon" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="8.5" />

        <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"

            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="28700 votes" />
    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/movie_header_container">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/tv_overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sackcentury.shinebuttonlib.ShineButton
                android:id="@+id/btn_favourite"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:src="@android:color/darker_gray"
                app:allow_random_color="false"
                app:big_shine_color="#FF6666"
                app:btn_color="@color/colorVeryLightGrey"
                app:btn_fill_color="#FF6666"
                app:click_animation_duration="200"
                app:enable_flashing="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shine_animation_duration="2500"
                app:shine_count="10"
                app:shine_turn_angle="10"
                app:siShape="@raw/heart"
                app:small_shine_color="#CC9999"
                app:small_shine_offset_angle="20" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorIconGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_overview_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_label"
                tools:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground fight clubs forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion." />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cl_overview"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/cast"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_cast"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/trailers"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_trailers"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/reviews"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/colorWhite"
                android:padding="16dp" />
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>